<resources>
    <string name="app_name">Calcolatrice</string>
    <string name="numero_1">Numero 1</string>
    <string name="btnPlus">+</string>
    <string name="numero_2">Numero 2</string>
    <string name="inserisci_il_numero_1">Inserisci il numero 1</string>
    <string name="inserisci_il_numero_2">Inserisci il numero 2</string>
    <string name="btnMinus">-</string>
    <string name="btnMol">*</string>
    <string name="btnDiv">/</string>
    <string name="btnDivi">/</string>
    <string name="txtRiuslt">=</string>
    <string name="risultato">Risultato</string>
    <string name="hint_risultato">Risultato</string>
</resources>