<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="729dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewNum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_1" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:text="@string/btnPlus"
                android:onClick="somma"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/hint_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/inserisci_il_numero_1"
                android:inputType="numberDecimal" />
            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnMinus"
                android:onClick="sottrazione"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewNum2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_2" />
            <Button
                android:id="@+id/btnMol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnMol"
                android:onClick="moltiplicazione"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/hint_num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/inserisci_il_numero_2"
                android:inputType="numberDecimal"
                />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDivi"
                android:onClick="Divisione"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewRisult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/risultato" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/hint_risul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_risultato"
                android:inputType="numberDecimal"
                tools:ignore="DuplicateIds" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>